# comp-physics-book

./: .gitignore  README.md  pyproject.toml
book/: main.py  output.html  render_katex.js  test.html
