[tool.poetry]
name = "book"
version = "0.1.0"
description = ""
authors = ["krisrosengreen <rosengreenpedersen@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
